--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,26 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug Tests",
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "smartStep": true,
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "sourceMaps": true,
+            "args": [
+                "--timeout",
+                "0"
+            ],
             "skipFiles": [
-                "<node_internals>/**"
+                "${workspaceFolder}/node_modules/**/*.js",
+                "<node_internals>/**/*.js"
             ],
             "cwd": "${workspaceRoot}",
-            "args": [
-                "src/index.ts"
-            ],
-            "runtimeArgs": [
-                "--nolazy",
-                "-r",
-                "ts-node/register"
+            "internalConsoleOptions": "openOnSessionStart",
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/**",
+                "!**/node_modules/typescript/**"
             ]
         }
     ]
