Fix color tests.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,27 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "test",
-            "command": "npm run test",
             "type": "shell",
-            "args": [],
-            "problemMatcher": [],
+            "label": "test",
+            "command": "npm",
+            "args": [
+                "run",
+                "test:nocover",
+                "--silent"
+            ],
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            },
             "group": {
                 "kind": "test",
                 "isDefault": true
-            }
-        }
+            },
+            "problemMatcher": []
+        },
     ]
 }
