--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "9patch-generator",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A 9patch generator written in pure Node.js that does not depend on chromium.",
   "scripts": {
+    "preversion": "npm run build && npm run lint && npm run test",
+    "build": "rimraf out && tsc",
+    "watch": "rimraf out && tsc --watch",
+    "prepublishOnly": "npm run build",
+    "lint": "eslint \"src/**\"",
     "test": "nyc mocha",
     "test:nocover": "mocha",
-    "test:watch": "mocha --watch"
+    "test:watch": "mocha --watch",
+    "publish-coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "mocha": {
     "spec": "src/**/*.spec.ts",
@@ -29,29 +35,35 @@
   "bin": {
     "bsc": "dist/cli.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rokucommunity/9patch-generator.git"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "jimp": "^0.16.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/sinon": "^10.0.13",
-    "@types/yargs": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "chai": "^4.3.6",
-    "coveralls": "^3.1.1",
-    "eslint": "^8.21.0",
-    "eslint-plugin-no-only-tests": "^3.0.0",
-    "mocha": "^10.0.0",
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^11.9.0",
+    "@types/sinon": "^9.0.4",
+    "@types/yargs": "^15.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-github": "4.3.6",
+    "eslint-plugin-no-only-tests": "2.6.0",
+    "mocha": "^9.1.3",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "sinon": "^14.0.0",
+    "rimraf": "^2.6.2",
+    "sinon": "^9.0.2",
     "source-map-support": "^0.5.13",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "ts-node": "8.9.1",
+    "typescript": "^4.7.2"
   },
   "nyc": {
     "include": [
