--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "fs-extra": "^10.1.0",
     "jimp": "^0.16.1",
+    "jsonc-parser": "^3.1.0",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^5.2.5",
     "@types/node": "^11.9.0",
     "@types/sinon": "^9.0.4",
